--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <p>Pages</p>
+    <a href="./contact.html">contact</a>
     <h1 >My First Website</h1>
     <img src="./images/w3schools.jpg" alt="W3Schools.com" width="104" height="142">
 </body>
