--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Pages</p>
-    <a href="./welcome.html">home</a>
+    <a href="./index.html">home</a>
     <h1>Contact Page</h1>
     <a href="https://www.linkedin.com/in/ngoako-ramokgopa-07b65012a/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B2%2BL7OaLqQImm40iFxMGjqw%3D%3D">Linkedin</a>
     <a href="https://github.com/ngoakor12">Github</a>
